--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile 'org.assertj:assertj-core:3.10.0'
 }
