--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,36 @@
-plugins {
-    id 'java'
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.2.RELEASE")
+    }
 }
 
-group 'com.stavshamir.aka'
-version '1.0-SNAPSHOT'
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'idea'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
-sourceCompatibility = 1.8
+bootJar {
+    baseName = 'com.stavshamir.aka'
+    version = '1.0-SNAPSHOT'
+}
 
 repositories {
     mavenCentral()
 }
 
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+
 dependencies {
+    compile 'org.springframework.boot:spring-boot-starter-web'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
     compile group: 'com.google.guava', name: 'guava', version: '11.0.2'
 
-
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile 'org.assertj:assertj-core:3.10.0'
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
+    testCompile 'junit::junit'
 }
