--- a/build.gradle
+++ b/build.gradle
@@ -32,5 +32,5 @@ dependencies {
     compile group: 'com.google.guava', name: 'guava', version: '11.0.2'
 
     testCompile 'org.springframework.boot:spring-boot-starter-test'
-    testCompile 'junit::junit'
+    testCompile 'junit:junit'
 }
