--- a/build.gradle
+++ b/build.gradle
@@ -25,11 +25,11 @@ repositories {
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
-
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
     compile group: 'com.google.guava', name: 'guava', version: '11.0.2'
+    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
 
     testCompile 'org.springframework.boot:spring-boot-starter-test'
     testCompile 'junit:junit'
