--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-spring.main.web-application-type=none
-spring.main.banner-mode=off
-logging.level.root=off
-
 bash-history-file=/home/stav/.bash_history
 alias-user-file=/home/stav/aka_alias
+alias-script=/home/stav/aka/alias.sh
