--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,5 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.2.RELEASE")
-    }
-}
-
 apply plugin: 'java'
 apply plugin: 'idea'
-
-task fatJar(type: Jar) {
-    manifest {
-        attributes 'Main-Class': 'com.stavshamir.bag.Application'
-    }
-    baseName = project.name + '-all'
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
-    with jar
-}
 
 repositories {
     mavenCentral()
@@ -26,11 +8,24 @@ repositories {
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
+group 'com.stavshamir.bag'
+version '1.0-SNAPSHOT'
+
+task fatJar(type: Jar) {
+    manifest {
+        attributes 'Main-Class': 'com.stavshamir.bag.Application'
+    }
+    baseName = project.name
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
+
 dependencies {
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
     compile group: 'com.google.guava', name: 'guava', version: '11.0.2'
     compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
 
+    testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-all', version: '1.8.4'
-    testCompile("org.assertj:assertj-core:3.10.0")
+    testCompile 'org.assertj:assertj-core:3.10.0'
 }
